--- a/index.html
+++ b/index.html
@@ -660,21 +660,21 @@
                 <article class="project-card">
                     <i class="fas fa-tasks"></i>
                     <h3>Projet 1 : Application de Suivi d'Inventaire</h3>
-                    <p>Développement d'une application web complète et évolutive pour la gestion des stocks en entreprise. Le projet inclut une interface utilisateur intuitive pour le suivi en temps réel des entrées et sorties d'inventaire, ainsi qu'un système d'alerte pour les niveaux de stock bas. L'application est conçue pour être adaptable à divers environnements d'entreprise.</p>
-                    <p>Technologies : HTML, CSS, JavaScript, Node.js, Express.js, EJS, MySQL, Docker, Git.</p>
+                    <p>Développement d'une application complète et évolutive pour la gestion des stocks en entreprise. Le projet inclut une interface utilisateur intuitive pour le suivi en temps réel des entrées et sorties d'inventaire, ainsi qu'un système d'alerte pour les niveaux de stock bas. L'application est conçue pour être adaptable à divers environnements d'entreprise.</p>
+                    <p>Technologies : Codage en VBA</p>
                    <a href="https://github.com/altay1cvk/Application-de-suivie-inventaire" class="project-link" target="_blank">Voir sur GitHub <span class="emoji">🔗</span></a>
                 </article>
                 <article class="project-card">
                     <i class="fas fa-hospital"></i>
                     <h3>Projet 2 : Sécurisation d'Hôpital</h3>
-                    <p>Dans le cadre de ce projet, nous avons mis en place une solution de sécurité physique pour un établissement hospitalier. Le projet comprend l'installation de caméras de surveillance dans les zones sensibles, la mise en place d'un système de contrôle d'accès par badge pour le personnel et les visiteurs, ainsi que la configuration d'un poste de surveillance centralisé pour la gestion des alertes et la visualisation en temps réel.</p>
+                    <p>Dans le cadre de ce projet, nous avons mis en place une solution de sécurité "physique" pour un établissement hospitalier. Le projet comprend l'installation de ca^teurs pour surveillance dans les zones sensibles, la mise en place d'un système de contrôle d'accès par badge pour le personnel et les visiteurs, ainsi que la configuration d'un poste de surveillance centralisé pour la gestion des alertes et la visualisation en temps réel.</p>
                     <p>Technologies : Python, Bash, solutions de sécurité (Axis, Milestone), protocoles de sécurité, RFID.</p>
                     <a href="https://github.com/altay1cvk/S-curisation-h-pital" class="project-link" target="_blank">Voir sur GitHub <span class="emoji">🔗</span></a>
                 </article>
                 <article class="project-card">
                     <i class="fas fa-server"></i>
                     <h3>Projet 3 : Création d'un Data Center</h3>
-                    <p>Ce projet consistait à concevoir et mettre en œuvre un data center à petite échelle pour une entreprise en pleine croissance. Il comprend la planification de l'espace, la mise en place de serveurs physiques, la configuration du réseau, la gestion de l'alimentation électrique et le refroidissement, ainsi que la mise en place de solutions de sauvegarde et de reprise après sinistre.</p>
+                    <p>Ce projet consistait à concevoir et mettre en œuvre un data center virtuelle à petite échelle. Il comprend la planification de l'espace, la mise en place de serveurs physiques, la configuration du réseau, la gestion de l'alimentation électrique et le refroidissement, ainsi que la mise en place de solutions avec des capteurs pour la sécurité et le bon fonctionnement du data center.</p>
                     <p>Technologies : Virtualisation (VMware, Hyper-V), équipements réseau (routeurs, switches, pare-feu), systèmes de stockage (SAN, NAS), protocoles de redondance et de haute disponibilité.</p>
                     <a href="https://github.com/altay1cvk/Creation-Data-Center" class="project-link" target="_blank">Voir sur GitHub <span class="emoji">🔗</span></a>
                 </article>
