--- a/index.html
+++ b/index.html
@@ -965,7 +965,15 @@
                 <button class="nav-button next-button" aria-label="Projet suivant"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="carousel-container" id="personal-projects">
-                <!-- (Ajoutez vos projets personnels ici si vous en avez) -->
+                 <!-- Projet 1 -->
+                 <article class="carousel-item">
+                    <img src="p3.jpg" alt="Capture d'écran de l'application de suivi d'inventaire" class="project-image">
+                    <div class="project-content">
+                        <h3 class="project-title">Intelligence artificielle spécialisée dans le trading automatique de cryptomonnaies</h3>
+                        <p class="project-description">Conception d'une IA avancée et évolutive optimisée pour effectuer des achats et ventes au moment idéal, maximisant les profits tout en économisant un temps précieux.</p>
+                        <p class="project-tech">Technologies : Python</p>
+                        <a href=class="project-link" target="_blank">Bientôt disponible<span class="emoji">🔗</span></a>
+                    </div>
             </div>
         </section>
 
