--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
 
         <section class="section" id="contact">
             <h2><span class="emoji">✉️</span> Contact</h2>
-            <form class="contact-form" action="URL_DE_VOTRE_SCRIPT_DE_TRAITEMENT" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/mkgorlln" method="POST">
                 <div class="form-group">
                     <label for="name">Nom</label>
                     <input type="text" id="name" name="name" required>
