--- a/index.html
+++ b/index.html
@@ -806,10 +806,11 @@
         </div>
     </div>
 
-    <video id="intro-video" autoplay muted style="display: none; width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: 999;" disablePictureInPicture controlsList="nodownload noplaybackrate">
-        <source src="ecole.mp4" type="video/mp4">
-        Votre navigateur ne supporte pas la lecture de vidéos.
-    </video>
+    <video id="intro-video" muted style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: 999;" disablePictureInPicture controlsList="nodownload noplaybackrate">
+    <source src="ecole_optimisee.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas la lecture de vidéos.
+</video>
+<button id="play-button" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000;">Play</button>
 
     <div class="progress-bar-container">
         <div class="progress-bar"></div>
